--- a/src/Scrum/Views/Shared/_Layout.cshtml
+++ b/src/Scrum/Views/Shared/_Layout.cshtml
@@ -134,37 +134,21 @@
     <div class="container body-content">
         <nav class="uk-navbar-container" id="navBizBar" uk-navbar>
             <div class="uk-navbar-left">
-
                 <ul class="uk-navbar-nav">
-                    <li class="uk-parent"><a asp-area="" asp-controller="Account" asp-action="Index">Home</a></li>
-                    <li class="uk-parent"><a asp-area="" asp-controller="Projects" asp-action="Index">All Projects</a></li>
-                    <li class="uk-parent"><a asp-area="" asp-controller="Tools" asp-action="Index">Toolbox</a></li>
+                    <li class="uk-active"><a asp-area="" asp-controller="Account" asp-action="Index">Home</a></li>
+                    <li class="uk-active"><a asp-area="" asp-controller="Projects" asp-action="Index">All Projects</a></li>
+                    <li class="uk-active"><a asp-area="" asp-controller="Tools" asp-action="Index">Toolbox</a></li>
                 </ul>
-
             </div>
             <div class="uk-navbar-right">
 
                 <ul class="uk-navbar-nav">
-                    <li>
-                        <a href="#">Parent</a>
-                        <div class="uk-navbar-dropdown">
-                            <ul class="uk-nav uk-navbar-dropdown-nav">
-                                <li class="uk-active"><a href="#">Active</a></li>
-                                <li><a href="#">Item</a></li>
-                                <li class="uk-nav-header">Header</li>
-                                <li><a href="#">Item</a></li>
-                                <li><a href="#">Item</a></li>
-                                <li class="uk-nav-divider"></li>
-                                <li><a href="#">Item</a></li>
-                            </ul>
-                        </div>
-                    </li>
+                    <li class="active"><a href="">@User.Identity.Name</a></li>
+                    <li class="uk-active"><a asp-area="" asp-controller="Account" asp-action="Index">Log Off</a></li>
                 </ul>
             </div>
         </nav>
-
             @RenderBody()
-
     </div>
 </body>
 </html>
