--- a/src/Scrum/Views/Sprints/Details.cshtml
+++ b/src/Scrum/Views/Sprints/Details.cshtml
@@ -9,36 +9,82 @@
         <div class="uk-card uk-card-default uk-card-body">
             <h1 class="uk-heading-line uk-text-center"><span>@Model.Name</span></h1>
             <h3>@Model.Goal</h3>
+            <h5><span style="background-color: lightblue;">@Model.StartDate</span> TO <span style="background-color: tomato;">@Model.EndDate</span></h5>
         </div>
     </div>
     <div class="uk-width-1-3@m">
         <div class="uk-card uk-card-default uk-card-body">
             <h2 class="uk-heading-line uk-text-center"><span>Days Left</span></h2>
             <h1>@ViewBag.DaysLeft</h1>
+            <br />
         </div>
     </div>
-    <h3>@Model.StartDate - @Model.EndDate</h3>
-    <h3>@Model.EndDate</h3>
 
-    @using (Html.BeginForm())
+    <div class="uk-width-1-3@m">
+        <div class="uk-card uk-card-default uk-card-body">
+            @using (Html.BeginForm())
             {
-        @Html.DropDownList("TaskId")
-        <input type="submit" value="AddTask" />
-    }
-
-    @foreach (var task in Model.Tasks)
-            {
-        <div class="done-@task.Complete">
-            <p>@Html.ActionLink(@task.Description, "Details", "Tasks", new { id = @task.TaskId })</p>
+                @Html.DropDownList("TaskId")
+                <input type="submit" value="AddTask" />
+            }
         </div>
-    }
-
-    <p>@ViewBag.Current</p>
-
-    <div class="progress">
-        <div class="progress-bar progress-bar-info" role="progressbar"
-             aria-valuenow="@ViewBag.Current" aria-valuemin="0" aria-valuemax="100" style="width:@ViewBag.Current%">
-            @ViewBag.Current% Complete
+    </div>
+    <div class="uk-width-2-3@m">
+        <div class="uk-card uk-card-default uk-card-body">
+            <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar"
+                        aria-valuenow="@ViewBag.Current" aria-valuemin="0" aria-valuemax="100" style="width:@ViewBag.Current%;">
+                    @ViewBag.Current% Complete
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="uk-width-1-1@m">
+        <div class="uk-card uk-card-default uk-card-body">
+            <h1 class="uk-heading-line uk-text-center">Scrum Board</h1>
+            <div class="uk-child-width-1-3@s" uk-grid>
+                <div>
+                    <h4>To Do</h4>
+                    <div uk-sortable="group: sortable-group">
+                        @foreach(var task in @Model.Tasks)
+                        {
+                            @if (!@task.Complete && !@task.InProgress)
+                            {
+                                <div class="uk-margin">
+                                    <div class="uk-card uk-card-default uk-card-body uk-card-small"><i class="fa fa-times" aria-hidden="true" style="font-size: 20px; color: tomato;"></i> @task.Description</div>
+                                </div>
+                            }
+                        }
+                    </div>
+                </div>
+                <div>
+                    <h4>In Progress</h4>
+                    <div uk-sortable="group: sortable-group">
+                        @foreach (var task in @Model.Tasks)
+                        {
+                            @if ((@task.InProgress) && (!@task.Complete))
+                            {
+                                <div class="uk-margin">
+                                    <div class="uk-card uk-card-default uk-card-body uk-card-small"><i class="fa fa-briefcase" aria-hidden="true" style="font-size: 20px; color: blue;"></i> @task.Description</div>
+                                </div>
+                            }
+                        }
+                    </div>
+                </div>
+                <div>
+                    <h4>Completed</h4>
+                    <div uk-sortable="group: sortable-group">
+                    @foreach (var task in @Model.Tasks)
+                    {
+                        @if (@task.Complete)
+                        {
+                            <div class="uk-margin">
+                                <div class="uk-card uk-card-default uk-card-body uk-card-small"><i class="fa fa-check" aria-hidden="true" style="font-size: 20px; color: green;"></i> @task.Description</div>
+                            </div>
+                        }
+                    }
+                    </div>
+                </div>
+            </div>
     </div>
 </div>
