--- a/src/Scrum/Views/Projects/Details.cshtml
+++ b/src/Scrum/Views/Projects/Details.cshtml
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="uk-width-1-2">
-            <div class="uk-card uk-card-default uk-card-body uk-text-center">
+            <div class="uk-card uk-card-default uk-card-body">
                 <ul class="uk-subnav uk-subnav-pill uk-text-center" uk-switcher="animation: uk-animation-slide-left-medium, uk-animation-slide-right-medium">
                     <li><a href="#">Updates</a></li>
                     <li><a href="#">User Stories</a></li>
